--- a/Iris_Flower_Classification.ipynb
+++ b/Iris_Flower_Classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPN+bmsSQHqoKW1k/xaFrdL",
+      "authorship_tag": "ABX9TyOmUc7MVLdzNHGjtR7NHc59",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -769,8 +769,7 @@
         "• Try different algorithms (Neural Networks, etc.)   \n",
         "• Experiment with feature engineering  \n",
         "• Use cross-validation for more robust evaluation   \n",
-        "• Deploy the model for real-world use   \n",
-        "\n",
+        "• Deploy the model for real-world use   \n"
       ],
       "metadata": {
         "id": "63AHGiFewuzt"
